# TriMesh3

./: .clang-format  .gitignore  CMakeLists.txt  README.md  USER_GUIDE.md  UserGuide.md
tests/: all_tests.cc
